correction of alignment blocks

--- a/sass/blocks/_button.scss
+++ b/sass/blocks/_button.scss
@@ -15,7 +15,7 @@
     margin-bottom: 45px;
   }
   @media ($desktop-width) {
-    margin-bottom: 60px;
+    margin-bottom: 67px;
     font-size: 21px;
     font-weight: bold;
   }
