--- a/sass/blocks/_download-app.scss
+++ b/sass/blocks/_download-app.scss
@@ -14,7 +14,7 @@
     margin-bottom: 109px;
   }
   @media ($desktop-width) {
-    margin-bottom: 125px;
+    margin-bottom: 118px;
   }
 }
 
@@ -23,14 +23,16 @@
   justify-content: space-around;
   align-items: center;
   margin: 0 auto;
-  padding: 0;
+  margin-bottom: 20px;
+  padding: 0 30px;
   text-decoration: none;
   text-align: center;
   font-size: 0;
-  margin-bottom: 20px;
+
   @media ($tablet-width) {
     margin-bottom: 33px;
     width: 220px;
+    padding: 0;
   }
   @media ($desktop-width) {
     margin-bottom: 55px;
