--- a/sass/blocks/_page-header.scss
+++ b/sass/blocks/_page-header.scss
@@ -5,7 +5,7 @@
 }
 
 .page-header__nav {
-  background-color: darkorange;
+  background-color: rgba(0,0,0,0.3);
   @media ($tablet-width) {
     margin-bottom: 92px;
   }
