--- a/sass/blocks/_plans.scss
+++ b/sass/blocks/_plans.scss
@@ -1,7 +1,7 @@
 .plans {
   display: flex;
   padding-top: 70px;
-  padding-bottom: 100px;
+  padding-bottom: 96px;
   background-color: $gray;
   @media ($tablet-width) {
     padding-bottom: 27px;
