--- a/sass/blocks/_social-footer.scss
+++ b/sass/blocks/_social-footer.scss
@@ -11,10 +11,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media ($desktop-width) {
+    min-height: 197px;
+  }
 }
 
 .social-footer__logo {
-  width: 33%;
+  width: 150px;
 }
 
 .social-footer__logo-link {
