--- a/sass/blocks/_social.scss
+++ b/sass/blocks/_social.scss
@@ -1,5 +1,5 @@
 .social {
-  width: 33%;
+  width: 178px;
 }
 .social__icon {
   display: inline-block;
